# tso

./: build.sh  package-lock.json  package.json
config/: webpack.config.js
pkg/: CMakeLists.txt  postinst  postrm
pkg/astra/: 10-monitor.conf  Xsession  fix-theme.sh  fly-dmrc  tco32.conf
pkg/centos/gdm/: custom.conf.dist
pkg/centos/xinitrc.d/: 03-tco32-front.sh
public/: index.html
src/: App.js  index.js
src/actions/actionsAuth/: actionsAuth.js  index.js
src/actions/actionsCardLoyalties/: actionsCardLoyalties.js  index.js
src/actions/actionsFuelPumps/: actionsFuelPumps.js  index.js
src/actions/actionsOperatingMode/: actionsOperatingMode.js  index.js
src/actions/actionsOrderFuel/: actionsOrderFuel.js  index.js
src/actions/actionsPayOrder/: actionsPayOrder.js  index.js
src/actions/actionsReturnCheck/: actionsReturnCheck.js  index.js
src/actions/actionsSelectFuel/: actionsSelectFuel.js  index.js
src/actions/actionsStageProgress/: actionsStageProgress.js  index.js
src/actions/actionsStatusDevice/: actionsStatusDevice.js  index.js  test.json
src/components/BtnBack/: BtnBack.js  btnBack.scss
src/components/CardLoyality/: CardLoyalties.js  сardLoyalties.scss
src/components/CheckData/: CheckData.js  checkData.scss
src/components/Clock/: Clock.js
src/components/DeductingPoints/: DeductingPoints.js  deductingPoints.scss
src/components/Error-boundry/: Error-boundry.js
src/components/Error-indicator/: Error-indicator.js
src/components/ErrorPayBankCard/: ErrorPayBankCard.js  errorPayBankCard.scss
src/components/Footer/: Footer.js  footer.scss
src/components/FuelItem/: FuelItem.js  fuelItem.scss
src/components/GasFuelSelect/: GasFuelSelect.js  gasFuelSelect.scss
src/components/GasSelect/: GasSelect.js  gasSelect.scss
src/components/GasStage/: GasStage.js  gasStage.scss
src/components/GasStationStatus/: GasStationStatus.js  gasStationStatus.scss
src/components/Header/: Header.js  header.scss
src/components/KeyboardVirtual/: KeyboardVirtual.js  keyboardVirtual.scss
src/components/PinPadCard/: PinPadCard.js  pinPadCard.scss
src/components/Preloader/: Preloader.js  preloader.scss
src/components/PrintCheck/: PrintCheck.js  printCheck.scss
src/components/QuantityFuel/: QuantityFuel.js  quantityFuel.scss
src/components/ReturnPrintCheck/: ReturnPrintCheck.js  returnPrintCheck.scss
src/components/ReturnScanCheck/: ReturnScanCheck.js  (+1 more)
src/reducer/: authReducer.js  fuelPumpsReducer.js  loyaltiesReducer.js  mainReducer.js  operatingModeReducer.js  orderFuelReducer.js  payOrderReducer.js  reducerStageProgress.js  returnOrderReducer.js  selectFuelReducer.js  statusDeviceReducer.js
src/scss/: app.scss
src/store/: store.js
src/utils/: globalConst.js  utils.js
(+19 files in other folders)
